--- a/USAidProjects/res/layout/usaid_map_layout.xml
+++ b/USAidProjects/res/layout/usaid_map_layout.xml
@@ -1,6 +1,12 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+    <MapView
           android:id="@+id/usaid_map"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:name="com.google.android.gms.maps.MapFragment"/>
+          android:name="com.google.android.gms.maps.MapView"/>
 
+</RelativeLayout>
