--- a/USAidProjects/res/layout/usaid_map_layout.xml
+++ b/USAidProjects/res/layout/usaid_map_layout.xml
@@ -3,10 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <MapView
+    <com.google.android.gms.maps.MapView
           android:id="@+id/usaid_map"
           android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:name="com.google.android.gms.maps.MapView"/>
+          android:layout_height="match_parent" />
 
 </RelativeLayout>
