Added new IO classes. Updated string removing unused countries.

--- a/USAidProjects/res/values/usaid_projects_strings.xml
+++ b/USAidProjects/res/values/usaid_projects_strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (c) 2013 Thermopylae Sciences and Technology. All rights reserved. -->
 <resources>
 
     <string name="app_name">USAid Projects</string>
@@ -14,10 +14,8 @@
     <string name="usaid_action_filter_country_angola">Angola</string>
     <string name="usaid_action_filter_country_armenia">Armenia</string>
     <string name="usaid_action_filter_country_bangladesh">Bangladesh</string>
-    <string name="usaid_action_filter_country_bosnia">Bosnia and Hercegovina</string>
     <string name="usaid_action_filter_country_brazil">Brazil</string>
     <string name="usaid_action_filter_country_burma">Burma</string>
-    <string name="usaid_action_filter_country_burundi">Burundi</string>
     <string name="usaid_action_filter_country_cambodia">Cambodia</string>
     <string name="usaid_action_filter_country_chad">Chad</string>
     <string name="usaid_action_filter_country_colombia">Colombia</string>
@@ -27,7 +25,6 @@
     <string name="usaid_action_filter_country_egypt">Egypt</string>
     <string name="usaid_action_filter_country_el_salvador">El Salvador</string>
     <string name="usaid_action_filter_country_ethiopia">Ethiopia</string>
-    <string name="usaid_action_filter_country_gambia">Gambia</string>
     <string name="usaid_action_filter_country_georgia">Georgia</string>
     <string name="usaid_action_filter_country_ghana">Ghana</string>
     <string name="usaid_action_filter_country_guatemala">Guatemala</string>
@@ -37,11 +34,9 @@
     <string name="usaid_action_filter_country_iraq">Iraq</string>
     <string name="usaid_action_filter_country_kazakhstan">Kazakhstan</string>
     <string name="usaid_action_filter_country_kenya">Kenya</string>
-    <string name="usaid_action_filter_country_kosovo">Kosovo</string>
     <string name="usaid_action_filter_country_kyrgyzstan">Kyrgyzstan</string>
     <string name="usaid_action_filter_country_lebanon">Lebanon</string>
     <string name="usaid_action_filter_country_liberia">Liberia</string>
-    <string name="usaid_action_filter_country_libya">Libya</string>
     <string name="usaid_action_filter_country_mali">Mali</string>
     <string name="usaid_action_filter_country_mauritania">Mauritania</string>
     <string name="usaid_action_filter_country_mexico">Mexico</string>
@@ -62,17 +57,14 @@
     <string name="usaid_action_filter_country_south_africa">South Africa</string>
     <string name="usaid_action_filter_country_south_sudan">South Sudan</string>
     <string name="usaid_action_filter_country_sri_lanka">Sri Lanka</string>
-    <string name="usaid_action_filter_country_sudan">Sudan</string>
     <string name="usaid_action_filter_country_tajikistan">Tajikistan</string>
     <string name="usaid_action_filter_country_tanzania">Tanzania</string>
     <string name="usaid_action_filter_country_timor_leste">Timor-Leste</string>
     <string name="usaid_action_filter_country_turkmenistan">Turkmenistan</string>
     <string name="usaid_action_filter_country_uganda">Uganda</string>
-    <string name="usaid_action_filter_country_ukraine">Ukraine</string>
     <string name="usaid_action_filter_country_uzbekistan">Uzbekistan</string>
     <string name="usaid_action_filter_country_vietnam">Vietnam</string>
     <string name="usaid_action_filter_country_gaza">WB Gaza</string>
-    <string name="usaid_action_filter_country_yemen">Yemen</string>
     <string name="usaid_action_filter_country_zimbabwe">Zimbabwe</string>
     
     <!-- no data -->
