--- a/USAidProjects/res/layout/usaid_list_group.xml
+++ b/USAidProjects/res/layout/usaid_list_group.xml
@@ -1,3 +1,4 @@
+<!-- Copyright (c) 2013 Thermopylae Sciences and Technology. All rights reserved. -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
