--- a/USAidProjects/res/layout/usaid_list_item.xml
+++ b/USAidProjects/res/layout/usaid_list_item.xml
@@ -1,3 +1,4 @@
+<!-- Copyright (c) 2013 Thermopylae Sciences and Technology. All rights reserved. -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="55dip"
