--- a/USAidProjects/res/values/usaid_projects_server_strings.xml
+++ b/USAidProjects/res/values/usaid_projects_server_strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (c) 2013 Thermopylae Sciences and Technology. All rights reserved. -->
 <!-- DO NOT TRANSLATE -->
 <resources>
 
@@ -24,10 +24,8 @@
     <string name="usaid_flag_angola">angola</string>
     <string name="usaid_flag_armenia">armenia</string>
     <string name="usaid_flag_bangladesh">bangladesh</string>
-    <string name="usaid_action_filter_country_bosnia">bosnia</string>
     <string name="usaid_flag_brazil">brazil</string>
     <string name="usaid_flag_burma">burma</string>
-    <string name="usaid_flag_burundi">burundi</string>
     <string name="usaid_flag_cambodia">cambodia</string>
     <string name="usaid_flag_chad">chad</string>
     <string name="usaid_flag_colombia">colombia</string>
@@ -37,7 +35,6 @@
     <string name="usaid_flag_egypt">egypt</string>
     <string name="usaid_flag_el_salvador">el_salvador</string>
     <string name="usaid_flag_ethiopia">ethiopia</string>
-    <string name="usaid_flag_gambia">gambia</string>
     <string name="usaid_flag_georgia">georgia</string>
     <string name="usaid_flag_ghana">ghana</string>
     <string name="usaid_flag_guatemala">guatemala</string>
@@ -47,11 +44,9 @@
     <string name="usaid_flag_iraq">iraq</string>
     <string name="usaid_flag_kazakhstan">kazakhstan</string>
     <string name="usaid_flag_kenya">kenya</string>
-    <string name="usaid_flag_kosovo">kosovo</string>
     <string name="usaid_flag_kyrgyzstan">kyrgyzstan</string>
     <string name="usaid_flag_lebanon">lebanon</string>
     <string name="usaid_flag_liberia">liberia</string>
-    <string name="usaid_flag_libya">libya</string>
     <string name="usaid_flag_mali">mali</string>
     <string name="usaid_flag_mauritania">mauritania</string>
     <string name="usaid_flag_mexico">mexico</string>
@@ -72,17 +67,14 @@
     <string name="usaid_flag_africa">south_africa</string>
     <string name="usaid_flag_south_sudan">south_sudan</string>
     <string name="usaid_flag_sri_lanka">sri_lanka</string>
-    <string name="usaid_flag_sudan">sudan</string>
     <string name="usaid_flag_tajikistan">tajikistan</string>
     <string name="usaid_flag_tanzania">tanzania</string>
     <string name="usaid_flag_timor_leste">timor_leste</string>
     <string name="usaid_flag_turkmenistan">turkmenistan</string>
     <string name="usaid_flag_uganda">uganda</string>
-    <string name="usaid_flag_ukraine">ukraine</string>
     <string name="usaid_flag_uzbekistan">uzbekistan</string>
     <string name="usaid_flag_vietnam">vietnam</string>
     <string name="usaid_flag_gaza">west_bank_and_gaza</string>
-    <string name="usaid_flag_yemen">yemen</string>
     <string name="usaid_flag_zimbabwe">zimbabwe</string>
     
 </resources>
