updating countries and region

--- a/USAidProjects/res/values/usaid_projects_arrays.xml
+++ b/USAidProjects/res/values/usaid_projects_arrays.xml
@@ -22,41 +22,43 @@
     </string-array>
     
     <string-array name="usaid_filter_region_asia">
-        <item>@string/usaid_action_filter_country_bangladesh</item>
-        <item>@string/usaid_action_filter_country_burma</item>
-        <item>@string/usaid_action_filter_country_cambodia</item>
+        <item>@string/usaid_action_filter_country_bangladesh</item> <!-- not defined here second set -->
+        <item>@string/usaid_action_filter_country_burma</item>      <!-- not defined here second set -->
+        <item>@string/usaid_action_filter_country_cambodia</item>   <!-- not defined here second set -->
         <item>@string/usaid_action_filter_country_india</item>
         <item>@string/usaid_action_filter_country_indonesia</item>
         <item>@string/usaid_action_filter_country_kazakhstan</item>
         <item>@string/usaid_action_filter_country_kyrgyzstan</item>
         <item>@string/usaid_action_filter_country_nepal</item>
         <item>@string/usaid_action_filter_country_philippines</item>
-        <item>@string/usaid_action_filter_country_sri_lanka</item>
+        <item>@string/usaid_action_filter_country_sri_lanka</item>  <!-- defined in second set -->
         <item>@string/usaid_action_filter_country_tajikistan</item>
         <item>@string/usaid_action_filter_country_timor_leste</item>
         <item>@string/usaid_action_filter_country_turkmenistan</item>
         <item>@string/usaid_action_filter_country_uzbekistan</item>
-        <item>@string/usaid_action_filter_country_vietnam</item>
+        <item>@string/usaid_action_filter_country_vietnam</item>    <!-- defined in second set -->
     </string-array>
     
     <string-array name="usaid_filter_region_europe">
         <item>@string/usaid_action_filter_country_albania</item>
-        <item>@string/usaid_action_filter_country_armenia</item>
+        <item>@string/usaid_action_filter_country_armenia</item>    <!-- not defined here second set -->
+        <item>@string/usaid_action_filter_country_belarus</item>          <!-- defined in second set -->
         <item>@string/usaid_action_filter_country_georgia</item>
+        <item>@string/usaid_action_filter_country_moldova</item>          <!-- defined in second set -->
         <item>@string/usaid_action_filter_country_montenegro</item>
         <item>@string/usaid_action_filter_country_serbia</item>
     </string-array>
     
     <string-array name="usaid_filter_region_latin">
-        <item>@string/usaid_action_filter_country_brazil</item>
-        <item>@string/usaid_action_filter_country_colombia</item>
+        <item>@string/usaid_action_filter_country_brazil</item>     <!-- not defined here second set -->
+        <item>@string/usaid_action_filter_country_colombia</item>   <!-- not defined here second set -->
         <item>@string/usaid_action_filter_country_dominican_republic</item>
         <item>@string/usaid_action_filter_country_ecuador</item>
         <item>@string/usaid_action_filter_country_el_salvador</item>
         <item>@string/usaid_action_filter_country_guatemala</item>
         <item>@string/usaid_action_filter_country_haiti</item>
         <item>@string/usaid_action_filter_country_mexico</item>
-        <item>@string/usaid_action_filter_country_nicaragua</item>
+        <item>@string/usaid_action_filter_country_nicaragua</item>  <!-- defined in second set -->
         <item>@string/usaid_action_filter_country_paraguay</item>
         <item>@string/usaid_action_filter_country_peru</item>
     </string-array>
@@ -71,16 +73,16 @@
     
     <string-array name="usaid_filter_region_africa">
         <item>@string/usaid_action_filter_country_angola</item>
-        <item>@string/usaid_action_filter_country_chad</item>
+        <item>@string/usaid_action_filter_country_chad</item>   <!-- not defined here second set -->
         <item>@string/usaid_action_filter_country_congo</item>
         <item>@string/usaid_action_filter_country_ethiopia</item>
         <item>@string/usaid_action_filter_country_ghana</item>
         <item>@string/usaid_action_filter_country_kenya</item>
         <item>@string/usaid_action_filter_country_liberia</item>
-        <item>@string/usaid_action_filter_country_mali</item>
-        <item>@string/usaid_action_filter_country_mauritania</item>
+        <item>@string/usaid_action_filter_country_mali</item>   <!-- not defined here second set -->
+        <item>@string/usaid_action_filter_country_mauritania</item> <!-- not defined here second set -->
         <item>@string/usaid_action_filter_country_mozambique</item>
-        <item>@string/usaid_action_filter_country_niger</item>
+        <item>@string/usaid_action_filter_country_niger</item>  <!-- not defined here second set -->
         <item>@string/usaid_action_filter_country_nigeria</item>
         <item>@string/usaid_action_filter_country_rwanda</item>
         <item>@string/usaid_action_filter_country_senegal</item>
