--- a/USAidProjects/res/values/usaid_projects_strings.xml
+++ b/USAidProjects/res/values/usaid_projects_strings.xml
@@ -85,8 +85,7 @@
     
     <!-- regions -->
     <string name="usaid_action_filter_region">Region</string>
-    <string name="usaid_action_filter_region_afganistan">AFGHANISTAN</string>
-    <string name="usaid_action_filter_region_pakistan">PAKISTAN</string>
+    <string name="usaid_action_filter_region_afganistan_pakistan">AFGHANISTAN AND PAKISTAN</string>
     <string name="usaid_action_filter_region_asia">ASIA</string>
     <string name="usaid_action_filter_region_europe">EUROPE AND EURASIA</string>
     <string name="usaid_action_filter_region_latin_america">LATIN AMERICA AND THE CARIBBEAN</string>
