--- a/USAidProjects/res/values/usaid_projects_styles.xml
+++ b/USAidProjects/res/values/usaid_projects_styles.xml
@@ -17,5 +17,10 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <style name="usaid_medium_text"
+        parent="@android:style/TextAppearance.Medium" >
+        <item name="android:typeface">monospace</item>
+    </style>
 
 </resources>
