--- a/USAidProjects/res/menu/usaid_main.xml
+++ b/USAidProjects/res/menu/usaid_main.xml
@@ -2,9 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_filter_reset"
+        android:showAsAction="always"
+        android:title="@string/usaid_action_filter_reset"/>
+    
+    <item
+        android:id="@+id/action_filter_reload"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/usaid_action_filter_reload"/>
+    
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="200"
+        android:showAsAction="never"
+        android:title="@string/action_about"/>
 
 </menu>
