--- a/USAidProjects/res/values/usaid_projects_server_strings.xml
+++ b/USAidProjects/res/values/usaid_projects_server_strings.xml
@@ -8,9 +8,16 @@
     <string name="usaid_server_overview">overview</string>
     
     <!-- used to get a list of projects by country -->
-    <string name="usaid_server_country_start">projects&#38;c=</string>
-    <!-- put the country name between these two -->
-    <string name="usaid_server_country_end">&#38;v=flag</string>
+    <string name="usaid_server_projects">projects</string>
+    
+    <!-- countries -->
+    <string name="usaid_server_country_start">&#38;c=</string>
+    
+    <!-- use flags -->
+    <string name="usaid_server_flag">&#38;v=flag</string>
+    
+    <!-- spacer for query data -->
+    <string name="usaid_server_spacer">:::</string>
     
     <!-- single project detail just add the project id to the end -->
     <string name="usaid_server_project_detail">detail&#38;d=</string>
