country list displaying

--- a/USAidProjects/res/layout/usaid_country_item.xml
+++ b/USAidProjects/res/layout/usaid_country_item.xml
@@ -6,7 +6,7 @@
     
     <!-- imageview for flag -->
     <ImageView
-        android:id="@+id/usaid_data_image_type"
+        android:id="@+id/usaid_country_flag"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginTop="4dp"
@@ -14,10 +14,10 @@
     
     <TextView
         style="@style/usaid_medium_text"
-        android:id="@+id/usaid_title"
+        android:id="@+id/usaid_country_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/usaid_data_image_type"
+        android:layout_toRightOf="@id/usaid_country_flag"
         android:maxLines="1"
         android:layout_marginLeft="4sp" />
     
