--- a/USAidProjects/res/layout/usaid_map_layout.xml
+++ b/USAidProjects/res/layout/usaid_map_layout.xml
@@ -4,9 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <com.google.android.gms.maps.MapView
+    <fragment
+        android:id="@+id/usaid_map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.google.android.gms.maps.MapFragment" />
+    
+<!--     <com.google.android.gms.maps.MapView
           android:id="@+id/usaid_map"
           android:layout_width="match_parent"
-          android:layout_height="match_parent" />
+          android:layout_height="match_parent" />   -->
 
 </RelativeLayout>
