adding in sector list

--- a/USAidProjects/res/layout/usaid_filter_layout.xml
+++ b/USAidProjects/res/layout/usaid_filter_layout.xml
@@ -43,11 +43,26 @@
         android:text="@string/usaid_no_data" />
     
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/sector_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_toRightOf="@id/usaid_filter_buttons_holder"
-        android:layout_below="@id/usaid_filter_locations"
+        android:visibility="gone" />
+    
+    <ExpandableListView
+        android:id="@+id/initiative_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_toRightOf="@id/usaid_filter_buttons_holder"
+        android:layout_below="@id/sector_list"
+        android:visibility="gone" />
+    
+    <RelativeLayout
+        android:id="@+id/time_select"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_toRightOf="@id/usaid_filter_buttons_holder"
+        android:layout_below="@id/initiative_list"
         android:visibility="gone" />
     
 </RelativeLayout>
