--- a/USAidProjects/res/values/usaid_projects_styles.xml
+++ b/USAidProjects/res/values/usaid_projects_styles.xml
@@ -18,6 +18,11 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     
+    <style name="usaid_small_text"
+        parent="@android:style/TextAppearance.Small" >
+        <item name="android:typeface">monospace</item>
+    </style>
+    
     <style name="usaid_medium_text"
         parent="@android:style/TextAppearance.Medium" >
         <item name="android:typeface">monospace</item>
